--- a/src/main/resources/templates/link-expression.html
+++ b/src/main/resources/templates/link-expression.html
@@ -5,12 +5,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Link Expressions</title>
-  <link th:href="@{/css/demo.css}" rel="stylesheet" />
+    <link th:href="@{/static/demo.css}" rel="stylesheet">
 </head>
 <body>
 <h1>Link Expresssions Demo: </h1>
 <a th:href="@{/variable-expression}">variable-expression</a>
 <a th:href="@{/selection-expression}">selection-expression</a>
-<p> <a th:href="@{link-expression/{id}(id=${id})}">link with parameter</a></p>
+<p> <a th:href="@{link-expression/{id}(id=${id})}">link-with-parameter</a></p>
 </body>
 </html>
